[gd_scene load_steps=11 format=3 uid="uid://c463rnyx866ni"]

[ext_resource type="Script" path="res://Scenes/FishFolder/second_for_fish.gd" id="1_67bds"]
[ext_resource type="Texture2D" uid="uid://dahnnt5tc40se" path="res://pictures/Base_3.png" id="1_eiom7"]
[ext_resource type="PackedScene" uid="uid://bbe4qc107mae0" path="res://Scenes/FishFolder/FishBaseNew.tscn" id="2_fjlgo"]
[ext_resource type="PackedScene" uid="uid://crpvcdb74brc" path="res://bottle.tscn" id="2_nj5fg"]
[ext_resource type="PackedScene" uid="uid://cip6qd66jiu3l" path="res://Scenes/Bubble.tscn" id="3_d63iu"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_cegtm"]
normal = Vector2(1, 0)
distance = -488.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_4yywu"]
distance = -489.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_yjsmr"]
distance = -312.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_keolm"]
distance = -115.0

[sub_resource type="Curve2D" id="Curve2D_fhava"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1080, 448, 0, 0, 0, 0, 1080, 832, 0, 0, 0, 0, 120, 840, 0, 0, 0, 0, 120, 448, 0, 0, 0, 0, 1080, 448)
}
point_count = 5

[node name="Node2D" type="Node2D"]
script = ExtResource("1_67bds")
fish_scene = ExtResource("2_fjlgo")

[node name="Node" type="Node" parent="."]

[node name="Base1" type="Sprite2D" parent="."]
position = Vector2(598, 543)
texture = ExtResource("1_eiom7")

[node name="Area2D" type="Area2D" parent="Base1"]

[node name="bottle" parent="Base1/Area2D" instance=ExtResource("2_nj5fg")]

[node name="StaticBody2D" type="StaticBody2D" parent="Base1/Area2D"]

[node name="LeftBund" type="CollisionShape2D" parent="Base1/Area2D/StaticBody2D"]
shape = SubResource("WorldBoundaryShape2D_cegtm")

[node name="RightBound" type="CollisionShape2D" parent="Base1/Area2D/StaticBody2D"]
rotation = -1.5708
shape = SubResource("WorldBoundaryShape2D_4yywu")

[node name="BottomBound" type="CollisionShape2D" parent="Base1/Area2D/StaticBody2D"]
shape = SubResource("WorldBoundaryShape2D_yjsmr")

[node name="TopBound" type="CollisionShape2D" parent="Base1/Area2D/StaticBody2D"]
rotation = -3.14159
shape = SubResource("WorldBoundaryShape2D_keolm")

[node name="AnimatableBody2D" type="AnimatableBody2D" parent="Base1/Area2D/StaticBody2D"]
visible = false

[node name="Bubble" parent="Base1/Area2D" instance=ExtResource("3_d63iu")]

[node name="Camera2D" type="Camera2D" parent="Base1"]

[node name="Container" type="Container" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="FishPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_fhava")

[node name="FishSpawnLocation" type="PathFollow2D" parent="FishPath"]
position = Vector2(1080, 448)
rotation = 1.5708
